--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "csurf": "^1.11.0",
@@ -14,6 +15,7 @@
     "express": "~4.16.1",
     "express-handlebars": "^5.1.0",
     "express-session": "^1.17.1",
+    "express-validator": "5.3.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.27",
