--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.27",
     "morgan": "~1.9.1",
+    "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4",
-    "passport": "^0.4.1"
+    "nodemon": "^2.0.4"
   }
 }
